# ProjetoPratico

./: .gitignore  README.md  docker-compose.yml  exemple.toModel.py  pyproject.toml  stack.yml  traefik.yml
.postman/: resources.yaml
services/agenda/: README.md  (+1 more)
services/usersService/: Dockerfile  pyproject.toml  service.yml
services/usersService/src/: server.py
services/usersService/src/API/: provider.py
services/usersService/src/API/Controllers/: UserController.py
services/usersService/src/API/Interfaces/: UseCasesUserInterface.py
services/usersService/src/Auth/: bodyTypes.py  router.py
services/usersService/src/Auth/services/: login.py  tokenJwt.py  validateLogin.py
services/usersService/src/Funcionario/API/: router.py
services/usersService/src/Funcionario/Domain/Entities/: funcionario.py
services/usersService/src/Funcionario/Domain/ValueObjects/: idFuncionario.py
services/usersService/src/Funcionario/Infra/Repositorys/: AgendaRepository.py
services/usersService/src/Infra/Config/db/liteSql/: liteSql.py
services/usersService/src/Infra/Models/: UserSqlSchamy.py
services/usersService/src/Infra/RepoAdapter/: UserRepository.py
services/usersService/src/Modules/User/Aplication/UseCases/: createUseCase.py  deleteUseCase.py  detailUseCase.py  listUseCase.py  updateUseCase.py
services/usersService/src/Modules/User/Domain/Entities/: userEntity.py
services/usersService/src/Modules/User/Domain/ValueObjects/: NomeVO.py  cargoVO.py  emailVO.py  passwordVO.py  roleVO.py  userNomeVO.py
services/usersService/src/Modules/User/Repository/: iAgendaRepository.py
services/usersService/src/Paciente/Domain/Entities/: pacienteEntity.py
services/usersService/src/modules/Paciente/Domain/ValueObjects/: cpf.py  idPaciente.py
(+50 files in other folders)
